--- a/01-fundamentos/bloco-03-introducao-a-html-e-css/3.2-html-e-css-primeiros-passos-em-css/Exercicio/index.html
+++ b/01-fundamentos/bloco-03-introducao-a-html-e-css/3.2-html-e-css-primeiros-passos-em-css/Exercicio/index.html
@@ -5,15 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML</title>
-    <style></style>
+    <style>
+        #h1{
+            width: 65px;
+            color: orange;
+        }
+        .list{
+            background-color: blueviolet;
+        }
+        .back-color{
+            background-color: chartreuse;
+        }
+
+    </style>
 </head>
 <body>
-    <h1>Exercícios 3.2</h1>
-    <p>Qual é a sua cor favorita?</p>
-    <ul>
-        <li>Amarelo</li>
-        <li>Vermelho</li>
-        <li>Marrom</li>
+    <h1 id="h1">Exercícios 3.2</h1>
+    <p class="back-color">Qual é a sua cor favorita?</p>
+    <ul class="back-color">
+        <li class="list">Amarelo</li>
+        <li class="list">Vermelho</li>
+        <li class="list">Marrom</li>
     </ul>
 </body>
 </html>
