--- a/01-fundamentos/bloco-03-introducao-a-html-e-css/3.2-html-e-css-primeiros-passos-em-css/Exercicio/index.html
+++ b/01-fundamentos/bloco-03-introducao-a-html-e-css/3.2-html-e-css-primeiros-passos-em-css/Exercicio/index.html
@@ -9,12 +9,38 @@
         #h1{
             width: 65px;
             color: orange;
+            font-family: sans-serif;        
         }
+
         .list{
-            background-color: blueviolet;
+            background-color: coral;        
         }
+
         .back-color{
             background-color: chartreuse;
+            text-align: center;
+        }
+
+        p{
+            font-weight: 600;
+            font-size: 48px;
+        }
+
+        body{
+            font-size: 16px;
+            line-height: 35px;
+        }
+        #amarelo{
+            color: yellow;
+            font-style: italic;
+        }
+        #vermelho{
+            color: red;
+            font-style: italic;
+        }
+        #marron{
+            color: brown;
+            font-style: italic;
         }
 
     </style>
@@ -23,9 +49,9 @@
     <h1 id="h1">Exercícios 3.2</h1>
     <p class="back-color">Qual é a sua cor favorita?</p>
     <ul class="back-color">
-        <li class="list">Amarelo</li>
-        <li class="list">Vermelho</li>
-        <li class="list">Marrom</li>
+        <li class="list" id="amarelo">Amarelo</li>
+        <li class="list" id="vermelho">Vermelho</li>
+        <li class="list" id="marron">Marrom</li>
     </ul>
 </body>
 </html>
