--- a/01-fundamentos/bloco-03-introducao-a-html-e-css/3.2-html-e-css-primeiros-passos-em-css/Exercicio/index.html
+++ b/01-fundamentos/bloco-03-introducao-a-html-e-css/3.2-html-e-css-primeiros-passos-em-css/Exercicio/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>HTML</title>
     <style>
-        #h1{
+        /* #h1{
             width: 65px;
             color: orange;
             font-family: sans-serif;        
@@ -41,7 +42,7 @@
         #marron{
             color: brown;
             font-style: italic;
-        }
+        } */
 
     </style>
 </head>
