--- a/01-fundamentos/bloco-03-introducao-a-html-e-css/3.4-html-semantico/exercicio-02/index.html
+++ b/01-fundamentos/bloco-03-introducao-a-html-e-css/3.4-html-semantico/exercicio-02/index.html
@@ -13,5 +13,49 @@
     <nav>Sobre</nav>
     <nav>Contato</nav>
     </section>
+    <article>
+        <h2>Fatos sobre o Stomatopoda</h2>
+        <section>
+            
+            <table border="1">
+                <tr>
+                    <th>Nome científico</th>
+                    <th>Reino</th>
+                    <th>Filo</th>
+                    <th>Subfilo</th>
+                    <th>Classe</th>
+                    <th>Subclasse</th>
+                    <th>Ordem</th>
+                </tr>
+                <tr>
+                    <th><em>Odontodactylus scyllarus</em></th>
+                    <th>Animalia</th>
+                    <th>Arthropoda</th>
+                    <th>Crustacea</th>
+                    <th>Malacostraca</th>
+                    <th>Hoplocarida</th>
+                    <th>Stomatopoda</th>
+                </tr>
+            </table>
+        </section>
+        <section>
+            <h2><b>Camarão Mantis é um perfurador e esmagador!</b></h2>
+            <p>Devido a uma diferença anatômica de seus <b>apêndices</b>, o Camarão Mantis pode ser classificado em dois grupos: os que têm <b> ataque perfurador (spearers)</b> e <b>esmagador (smashers)</b>. <b> Com isso, os esmagadores são considerados um dos animais mais fortes e velozes do planeta</b>, por terem um ataque rápido como uma bala e forte como um touro.</p>
+            <img src="../exercicio-02/images/Camarao-Mantis-perfurador-esmagador.png" alt="Camarão Mantis perfurador esmagador">
+        </section>
+        <section>
+            <h2><b>O animal mais forte do mundo</b></h2>
+            <p>O Camarão Mantis esmagador possui dois apêndices bem desenvolvidos (semelhantes a um martelo),<b>chamados de Porretes de Dáctilo</b>. Com essas “super patas” o animal espanca e esmaga suas presas em uma intensidade de aproximadamente 60 kg/cm² (daí o motivo de um de seus nomes ser lagosta-boxeadora).</p>
+            <img src="../exercicio-02/images/animal-mais-forte-mundo-1024x734.png" alt="Animal mais forte do mundo">
+        </section>
+        <section>
+            <h2><b>O animal mais rápido no gatilho</b></h2>
+            <p>Além da enorme potência de seu soco, esse animal consegue movimentar seus apêndices tal qual um tiro de arma de fogo: <b>seu golpe pode chegar a uma velocidade 720 km/h</b>. Curiosamente, tanto a força quanto rapidez do ataque, não danificam sua estrutura corporal.</p>
+            <img src=".//images/Animal-mais-rapido-1024x734.png" alt="Animal mais rapido">
+        </section>
+        <p>Referências bibliográfica: <a href="https://www.aquaa3.com.br/curiosidades-camarao-mantis/">AquaA3.com.br</a></p>        
+    </article>
+    <p>Veja este animal em ação <a href="https://www.youtube.com/watch?v=E0Li1k5hGBE">neste video</a></p>
+    <footer>Conteúdo compilado por Antonio Lisboa de Souza Neto, 2022</footer>
   </body>
 </html>
