--- a/01-fundamentos/bloco-03-introducao-a-html-e-css/3.4-html-semantico/exercicio-02/index.html
+++ b/01-fundamentos/bloco-03-introducao-a-html-e-css/3.4-html-semantico/exercicio-02/index.html
@@ -7,12 +7,17 @@
     <title>Stomatopoda</title>
   </head>
   <body>
-    <header>Soco a 80km/h: Conheça o Stomatopoda</header>
-    <section>
-    <nav>Página Inicial</nav>
-    <nav>Sobre</nav>
-    <nav>Contato</nav>
-    </section>
+        <header>
+            <h1 class="header-title"><b>Soco a 80km/h: Conheça o Stomatopoda</b></h1>       
+            <nav class="header-nav1">
+                <ul>
+                    <li class="header-nav"><a>Página Inicial</a></li>
+                    <li class="header-nav"><a>Sobre</a></li>
+                    <li class="header-nav"><a>Contato</a></li>
+                </ul>
+        </nav>
+        </header> 
+    </div>
     <article>
         <h2>Fatos sobre o Stomatopoda</h2>
         <section>
